--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.7",
+    "recharts": "^2.6.2",
     "typescript": "5.0.4"
   }
 }
